fix tech spacing in desktop

--- a/my-react-portfolio/src/Components/TechSection/TechSection.module.css
+++ b/my-react-portfolio/src/Components/TechSection/TechSection.module.css
@@ -62,42 +62,48 @@
     color: #ffffff;
     text-align: center;
     font-weight: 800;
+    padding-right: 3em;
   }
 
   .rightBox p {
     font-size: 24px;
+    text-shadow: none;
   }
 }
 
 /*media query for desktop - 2 rows */
 @media (min-width: 1024px) {
   .techContainer {
+    display: grid;
     grid-template-columns: 45% 55%;
-    margin-top: 2em;
-    padding: 18em 3em;
+    padding: 10em 0;
   }
 
   .leftBox {
     background-color: #0b24f5;
     color: #ffffff;
-    text-align: right;
-    padding-right: 6em;
+    padding-left: 10em;
+    padding-right: 4em;
   }
 
   .leftBox h1 {
     font-size: 80px;
     color: #ffffff;
+    text-align: right;
   }
 
   .rightBox {
     background-color: #0b24f5;
     color: #ffffff;
     text-align: left;
-    padding-right: 10em;
+    padding-right: 14em;
     font-weight: 800;
   }
 
   .rightBox p {
     font-size: 32px;
+    text-align: left;
+    padding-top: 1em;
+    text-shadow: none;
   }
 }
